--- a/Space/index2.html
+++ b/Space/index2.html
@@ -31,6 +31,8 @@ body {
 <script src="sprites/shipSpriteData.js"></script>
 <script src="sprites/spriteMaker.js"></script>
 
+<script src="drawing/drawing.js"></script>
+
 <script src="main.js"></script>
 
 <script src="initialize.js"></script>
